# AScript_compiler

./: CMakeLists.txt  clean.bat  run.bat
AScript_planning/: DFA.drawio  DFA1.drawio  DFA2.drawio  DFA3.drawio  DFA4.drawio  main.as  token_list.as
include/: Lexer.hpp  Tree.hpp  error_handler.hpp
src/: Lexer.cpp  error_handler.cpp  main.cpp
